--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,8 @@ img {
 /* ----HEADER SETS---- */
 .main-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
 }
 .header-container {
@@ -108,6 +110,23 @@ img {
   color: #404bbf;
 }
 
+.studio-link {
+  color: #404bbf;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+}
+
 .contacts {
   font-style: normal;
   margin-left: auto;
@@ -127,6 +146,10 @@ img {
   color: #434455;
 }
 
+.contacts-items {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .contacts-link:hover,
 .contacts-link:focus {
   color: #404bbf;
@@ -136,9 +159,17 @@ img {
 
 .hero-section {
   padding: 188px 0;
-  background: #2e2f42;
-
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background.jpg);
+  margin: auto;
+  max-width: 1440px;
   max-height: 600px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero-container {
   margin: 0 auto;
@@ -174,6 +205,8 @@ img {
   min-width: 169px;
   height: 56px;
   border: none;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -206,9 +239,25 @@ img {
   margin: 0 auto;
 }
 
-.benefis-items {
+.benefits-items {
   width: calc((100% - 72px) / 4);
 }
+
+.conteiner-benefits-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+  margin-bottom: 8px;
+}
+
+/* .benefits-icons {
+  fill: #2e2f42;
+} */
 
 .benefits-heading {
   text-align: left;
@@ -260,6 +309,22 @@ img {
 
 .team-text {
   text-align: center;
+}
+
+.team-list-icons {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.team-items-icons {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.team-icons {
+  fill: #f4f4fd;
 }
 
 /* ----PORTFOLIO SECTION FOUR---- */
