--- a/css/styles.css
+++ b/css/styles.css
@@ -273,10 +273,6 @@ img {
   padding: 120px 0;
 }
 
-.team-list {
-  display: flex;
-  gap: 24px;
-}
 .team-title {
   font-weight: 700;
   font-size: 36px;
@@ -286,6 +282,11 @@ img {
   color: #2e2f42;
   text-transform: capitalize;
   margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
 }
 
 .team-items {
@@ -307,6 +308,9 @@ img {
   text-align: center;
 }
 
+.team-container-icons {
+}
+
 .team-text {
   text-align: center;
 }
@@ -320,7 +324,20 @@ img {
 .team-items-icons {
   width: 40px;
   height: 40px;
+}
+
+.link-icon {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.link-icon:hover .link-icon:focus {
+  background-color: #404bbf;
 }
 
 .team-icons {
