--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -113,7 +114,6 @@ img {
 .studio-link {
   color: #404bbf;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio-link::after {
@@ -144,11 +144,11 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
-
-.contacts-items {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* .contacts-items {
+} */
 
 .contacts-link:hover,
 .contacts-link:focus {
@@ -387,7 +387,14 @@ img {
   background: #2e2f42;
   padding: 100px 0;
 }
+
 .footer-container {
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
+}
+
+.logo-text-container {
   flex-direction: column;
 }
 
@@ -404,4 +411,39 @@ img {
 .footer-text {
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.media-text {
+  color: #ffffff;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.footer-media-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-media-items {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-media-link {
+  width: 100%;
+  height: 100%;
+  border-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-media-link:hover .footer-media-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-icons {
+  fill: #f4f4fd;
 }
