--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,34 @@ img {
 
 .portfolio-items {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-items:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
+
+.image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.hidden-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  position: absolute;
+  top: 0;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-content {
@@ -391,11 +419,11 @@ img {
 .footer-container {
   display: flex;
   align-items: baseline;
-  margin-right: 120px;
 }
 
 .logo-text-container {
   flex-direction: column;
+  margin-right: 120px;
 }
 
 .footer-logo {
@@ -432,15 +460,16 @@ img {
 .footer-media-link {
   width: 100%;
   height: 100%;
-  border-color: #4d5ae5;
+  background-color: #4d5ae5;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-media-link:hover .footer-media-link:focus {
+.footer-media-link:hover,
+.footer-media-link:focus {
   background-color: #31d0aa;
 }
 
