--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,6 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .contacts-items {
-} */
-
 .contacts-link:hover,
 .contacts-link:focus {
   color: #404bbf;
@@ -308,9 +305,6 @@ img {
   text-align: center;
 }
 
-.team-container-icons {
-}
-
 .team-text {
   text-align: center;
 }
@@ -373,7 +367,7 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-items:hover {
+.portfolio-items:hover .hidden-text {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
